# GeMUNi

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/web/: .env.example  .env.local.example  Dockerfile  package.json  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  vercel.json
apps/web/prisma/: migration.sql  schema.prisma  schema.sqlite.prisma
apps/web/prisma/migrations/: 0002_add_email_verification.sql
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(main)/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/chat/: chat-panel.tsx
apps/web/src/components/dashboard/: report-card.tsx
apps/web/src/components/landing/: demo-tour.tsx  un-background.tsx
apps/web/src/components/layout/: navbar.tsx  (+1 more)
apps/web/src/lib/: auth.ts  email.ts
services/ai-engine/: .env.example  Dockerfile  Dockerfile.searxng  ai-err.txt  pyproject.toml  requirements.txt  searxng_settings.yml
services/ai-engine/src/: config.py  main.py
services/ai-engine/src/api/: routes.py  schemas.py
services/ai-engine/src/core/: citation.py  crawler.py  dedup.py  extractor.py  pipeline.py  ranker.py  reporter.py  search.py  searcher.py  summarizer.py
services/ai-engine/src/llm/: prompts.py  router.py
services/ai-engine/src/llm/providers/: gemini.py  groq.py  openrouter.py
services/ai-engine/src/news/: rss_feeds.py  scheduler.py
services/ai-engine/src/rag/: embeddings.py  retriever.py  vector_store.py
(+30 files in other folders)
